--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "digital-clock",
   "version": "1.0.0",
-  "description": "![](images/ax2.png)",
+  "description": "Digital Clock in Js using webpack",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production"
